testdata/golden/sema/valid/directives/stdlib_benchmark_module/main.sg
// Test: benchmark directive module
// Expected: No errors
import stdlib/directives/benchmark;

/// benchmark:
/// benchmark.throughput("test", 100, do_work);

fn do_work() -> nothing { return nothing; }
