testdata/golden/sema/invalid/alien_hints/rust_println_macro.sg
fn main() -> nothing {
    println!("hi");
    return nothing;
}
